--- a/lectures/git/git.tex
+++ b/lectures/git/git.tex
@@ -66,7 +66,7 @@
         \begin{itemize}
             \ii{Ingen central server -- varje användare är en ``nod'' i systemet.}
             \ii{Varje användare har en lokal kopia av hela projektets historik.}
-            \ii{Kommandon: \emph{clone} (kopiera hela repository), \emph{commit} (spara ändringar \textbf{lokalt}), och \emph{push/pull} (synkronisera ändringar).}
+            \ii{Kommandon: \emph{clone} (kopiera hela repository), \emph{checkout} och \emph{commit} (men annorlunda), och \emph{push/pull} (synkronisera ändringar).}
             \ii{Exempel: Git, Mercurial}
         \end{itemize}
     \end{block}
